# ignis

./: .gitignore  .gitmodules  AlifeControl.hpp  AlifeScenario.hpp  AlifeSensing.hpp  AlifeSensingVersion1.hpp  AlifeSensingVersion2.hpp  Angles.hpp  ArcCurveGeneration.hpp  CMakeLists.txt  CMakePresets.json  CgalVoronoi.hpp  CommonTypes.hpp  Config.hpp  Control.hpp  CurveFollowing.hpp  CurveFollowingControl.hpp  CurveGeneration.hpp  CurveSensing.hpp  CurveTypes.hpp  CurvesFromArcs.hpp  CurvesFromDilatedPolygons.hpp  DarsScenario.hpp  DataLogger.hpp  Following.hpp  GeosVoronoi.hpp  HybridVoronoi.hpp  Ignis.hpp  IgnisScenario.hpp  Ingris.hpp  Judgment.hpp  Parameters.hpp  Planning.hpp  README.md  Scenario.hpp  Sensing.hpp  Sim.hpp  Track.hpp  TrackGeneration.hpp  Utils.hpp  (+46 more)
data/EvolvedActiveVisionPlusRandom_gen1000_r10_p25_ssl100/: Config.hpp
data/EvolvedActiveVision_gen1000_r10_p25_ssl1M/: Config.hpp
data/EvolvedActiveVision_gen100_r10_p25_ssl1M/: Config.hpp
data/EvolvedGauci_gen1000_r10_p25_ssl1M/: Config.hpp
data/test/: Config.hpp
include/alife/: AlifeControl.hpp  AlifeScenario.hpp  AlifeSensing.hpp  Parameters.hpp
include/common/: Config.hpp  DataLogger.hpp  GeosVoronoi.hpp  Scenario.hpp  Sim.hpp  Utils.hpp  WorldCreation.hpp  WorldState.hpp
include/forage/: ForageControl.hpp  ForageScenario.hpp  ForageSensing.hpp  Parameters.hpp
include/ignis/: CurveFollowing.hpp  CurveFollowingControl.hpp  CurveSensing.hpp  CurveTypes.hpp  CurvesFromArcs.hpp  CurvesFromDilatedPolygons.hpp  IgnisScenario.hpp  Judgment.hpp
include/vorlife/: VorlifeControl.hpp  VorlifeScenario.hpp  VorlifeSensing.hpp
